# NodeNote

./: .gitignore  Graph.json  LICENSE.txt  README.md  README_ch_ZN.md  Test.py  component_property.py  component_property_grwidget.py  component_sky_widget.py  component_snow_widget.py  component_todolist_widget.py  component_water.py  example.spec  main.py  mainwindow_note_window.py  make.bat  requirements.txt  scene_view_my_scene.py  scene_view_my_view.py  scene_view_scene.py  setup.py  todolist.db
src/: pyproject.toml  setup.py
src/NodeNotePackage.egg-info/: PKG-INFO  SOURCES.txt
src/NodeNotePackage/Examples/: __init__.py  example.py  test.node.note  test.note
src/NodeNotePackage/NodeNote/Components/: __init__.py  attribute.py  draw.py  effect_background.py  effect_cutline.py  effect_snow.py  effect_water.py  markdown_edit.py  pipe.py  port.py  sub_view.py  todo.py  window.py  work_dir_interface.py
src/NodeNotePackage/NodeNote/GraphicsView/: __init__.py  app.py  scene.py  view.py
src/NodeNotePackage/NodeNote/Model/: __init__.py  constants.py  history.py  serializable.py  serialize.proto  serialize_pb2.py  stylesheet.py
src/docs/: Makefile  conf.py  make.bat
src/homes/: __init__.py  main.py
src/homes/component/: __init__.py  abstract_component.py
src/homes/component/appearance/: abstract_appearance.py
src/homes/component/layout/: free_layout.py
src/homes/config/handler/: handler_config.py
src/homes/constant/enum/: abstract_enum.py
src/homes/controller/view/: view.py
src/homes/core/handler/: logger_handler.py
src/homes/handler/: abstract_handler.py  logger_handler.py
src/homes/model/persistence/: serialization.py
src/homes/model/runtime/: history.py
src/homes/util/: file_util.py
src/shmilyyy/component/: base_component.py
src/shmilyyy/model/persistence/: serialization.py
src/smiley/: __init__.py  main.py
src/smiley/appearance/: abstract_appearance.py
src/smiley/appearance/effect/: abstract_cp_effect.py
src/smiley/appearance/layout/: abstract_layout.py
src/smiley/component/: abstract_component.py
src/smiley/component/appearance/: abstract_appearance.py
src/smiley/component/layout/: abstract_layout.py  free_layout.py
src/smiley/config/controller/: view_config.py
src/smiley/config/handler/: handler_config.py
src/smiley/constant/: constant.py
src/smiley/constant/enum/: abstract_enum.py
src/smiley/controller/: view.py
src/smiley/controller/scene/: scene.py
src/smiley/handler/: logger_handler.py
src/tests/handler/: test_handler.py
src/tests/view/: test_view.py
(+185 files in other folders)
